// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HDHub4u handle stranger things s05e05 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=Fv8xSTLVr_myF7sxac7dVKo38LcekxfbbGD62Cbz8oCCTrLL&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDUgNzIwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.org/file/s209STlORA7KCZMDW1zBZD1F2",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=-TrPfwv24ecfiVXil0_9bQrdNAe_7sKDuFodaD2FVi7VwhGm&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDUgMTA4MHA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.org/file/HVsAjJbUA3Dx4n5gkXJP8h6FA",
  },
]
`;

exports[`HDHub4u handle stranger things s05e07 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=LbjsKFBtH_KjuWWg8jRbxDXqUr8QP4oCy9DY5ySaS18WgkZP&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDcgNzIwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.org/file/6SbBuOBqZilbXKo0OnaLQyo2I",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=9PgksPIXSzM0iB-HpdNwptwP7cgLk4sxkMKbs4EzhSVEJMZa&q=U3RyYW5nZXIgVGhpbmdzIFMwNSBFcGlzb2RlIDcgMTA4MHA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcdn.org/file/8eFiSeVdd4nzXZD5NsPP3gaiN",
  },
]
`;

exports[`HDHub4u handle superman 2025 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=611XfumURzbMxSJG3XAB9QlfMwuIVENRUS91L7DBtuTZV4eT&q=U3VwZXJtYW4gMjAyNSA3MjBw",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=B0Zt2spEe_FuSEhY1b7nb3_MNzADN6UJ8oGLBhyYH6s8HzVc&q=U3VwZXJtYW4gMjAyNSAxMDgwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=fkG65xap4NOYyb3Ri24SqkLkhkeef9ImR3X8Ge9dN5-C7mmF&q=U3VwZXJtYW4gMjAyNSAxMDgwcA",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/search-recover.php?from_ac=1AUzY_MDAjMVPbIYBtOREd9TbiC4uLhIq_6Pzt07oSL6Y7ix&q=U3VwZXJtYW4gMjAyNSA0Sw",
  },
]
`;

exports[`HDHub4u handle the bone temple 2026 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/mphhuejosenpo1f",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/y24dkxj21ff1pi4",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/prhvvpxzam7rpva",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "en",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/wybyd8a0v52rwda",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/cqhutwars6jjrtd",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/brkmtrr9qaxqbgt",
  },
  {
    "meta": {
      "countryCodes": [
        "multi",
        "hi",
      ],
    },
    "url": "https://hubcloud.foo/drive/6xxhpyawdn0pn2c",
  },
]
`;
